# SOFA-oto.ini

./: .gitignore  README.md  README_EN.md  main.py  pyproject.toml  requirements.txt
src/: g2p.py  main.py
